[package]
name = "rasterv2"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8.4"
noise = "0.7.0"
dyn-clone = "1.0.4"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["bundled","ttf"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"